--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==1.5.1
+South==0.7.6
 argparse==1.2.1
 distribute==0.6.34
 django-bootstrapped==0.1.1-dev
 djangorestframework==2.3.3
 requests==1.2.1
+tweepy==2.0
 wsgiref==0.1.2
 xmltodict==0.4.6
