--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ argparse==1.2.1
 distribute==0.6.34
 django-bootstrapped==0.1.1-dev
 djangorestframework==2.3.3
+psycopg2==2.5
 requests==1.2.1
 tweepy==2.0
 wsgiref==0.1.2
